@@ -1,3 +1,5 @@
+'use client'
+
 import React, { useState, useEffect, useRef } from 'react';
 import Link from 'next/link';
 import Image from 'next/image';
@@ -23,7 +25,7 @@ const AuthNavigationBar = () => {
   }, []);
 
   return (
-    <nav className="w-full bg-black px-4 pt-2 pb-4 border-b-1 border-b border-[rgba(255,255,255,0.2)] relative z-[100]">
+    <nav className="w-full bg-black px-4 pt-2 pb-4 border-b-1 border-b border-[rgba(255,255,255,0.2)] relative z-[100] md:mt-[52px]">
       <div className="max-w-[1200px] mx-auto flex items-center justify-between relative">
         <Link href="/" className="text-white font-bold text-xl relative z-[100]">
           LookIntoMaxi
